# pipeline-api-agno

./: README.md  db.json  exemplo_03.py  pyproject.toml
agents/: main.py  main_2.py
dashboard/: app.py
pipeline/: exemplo_01.py  exemplo_02.py  exemplo_04.py
